# nightingale-deps

./: .gitattributes  .gitignore  .travis.yml  DEPVERSIONS  Makefile  README  README.licensing  arwrapper.py  build-no-xul.sh  build-xr.sh  build-xulrunner.sh  build.sh  call-nmake.py  clwrapper.py  depbuild-32bit.sh  depbuild-9.0.1.sh  depbuild.sh  fetch-build-xul.sh  first-run-linux.sh  first-run-win32.sh  fix-libtool-la-paths.pl  fix-pkg-config-paths.pl  fix-win32-libtool-la-paths.pl  lint-build.sh  mac-dep-build.sh  mac-xr-override.patch  mingw-win-dep-build.sh  msys-recursive-cp  ng-9.0.1-patches  rebuild.sh  sb-patcher.py  setup.sh  setup_mac_packages.sh  setup_win_packages.sh  songbird-vendor-defs.mk  songbird-vendor-rules.mk  sqlite-build.sh  vendor-binaries-checkin  vendor-respin-manifest.txt  win-dep-build.sh  (+1 more)
gettext/: CMakeLists.txt  Makefile.in  Makefile.nightingale  Makefile.songbird  aclocal.m4  autogen.sh  configure
gettext/MINGW-PATCHES/: README-relocatex-libintl.txt
gettext/build-aux/: install-reloc
gettext/gettext-runtime/: CMakeLists.txt  ConfigureChecks.cmake  Makefile.in  aclocal.m4  config.h.in  configure
gettext/gettext-runtime/doc/: Makefile.in
gettext/gettext-runtime/gnulib-lib/: Makefile.am  Makefile.in
gettext/gettext-runtime/intl/: CMakeLists.txt  Makefile.in  bindtextdom.c  canonicalize.c  dcigettext.c  export.h  intl.def  langprefs.c  libgnuintl.h.in  localename.c  os2compat.c  relocatex.c  vasnprintf.c  xsize.h
gettext/gettext-runtime/intl-csharp/: Makefile.in
gettext/gettext-runtime/intl-java/: Makefile.in
gettext/gettext-runtime/libasprintf/: Makefile.in  aclocal.m4
gettext/gettext-runtime/m4/: Makefile.in
gettext/gettext-runtime/man/: Makefile.in  bind_textdomain_codeset.3  bindtextdomain.3  envsubst.1  gettext.1.in  gettext.3  ngettext.1.in  ngettext.3  textdomain.3
gettext/gettext-runtime/po/: be.gmo  be.po  bg.gmo  bg.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  eo.gmo  eo.po  es.gmo  es.po  et.gmo  et.po  fi.gmo  fi.po  fr.gmo  fr.po  ga.gmo  ga.po  gettext-runtime.pot  gl.gmo  gl.po  hr.gmo  hr.po  hu.gmo  hu.po  id.gmo  id.po  it.gmo  (+41 more)
gettext/gettext-runtime/src/: CMakeLists.txt  Makefile.in
gettext/gettext-runtime/tests/: Makefile.in
gettext/gettext-tools/: Makefile.in  aclocal.m4  config.h.in  configure
gettext/gettext-tools/doc/: Makefile.in  gettext.info  gettext_1.html  gettext_10.html  gettext_11.html  gettext_12.html  gettext_13.html  gettext_14.html  gettext_15.html  gettext_16.html  gettext_17.html  gettext_18.html  gettext_19.html  gettext_2.html  gettext_20.html  gettext_21.html  gettext_22.html  gettext_23.html  gettext_24.html  gettext_25.html  gettext_3.html  gettext_4.html  gettext_5.html  gettext_6.html  gettext_7.html  gettext_8.html  gettext_9.html  gettext_foot.html  gettext_toc.html  stamp-vti  version.texi
gettext/gettext-tools/examples/: Makefile.in  aclocal.m4  configure
gettext/gettext-tools/gnulib-lib/: Makefile.gnulib  Makefile.in  argmatch.h  fnmatch.c  fnmatch_loop.c  gl_array_list.h  gl_linkedhash_list.h  localcharset.c  memset.c  obstack.h  strpbrk.c  uniconv.in.h  unilbrk.in.h  uniname.in.h
gettext/gettext-tools/gnulib-m4/: gnulib-cache.m4  gnulib-comp.m4
gettext/gettext-tools/gnulib-tests/: Makefile.gnulib  Makefile.in
gettext/gettext-tools/libgettextpo/: Makefile.gnulib  Makefile.in  exitfail.h
gettext/gettext-tools/libgrep/: Makefile.gnulib  Makefile.in  regex_internal.c  regex_internal.h  regexec.c
gettext/gettext-tools/m4/: Makefile.in
gettext/gettext-tools/man/: Makefile.in  autopoint.1  gettextize.1  msgattrib.1  msgcat.1  msgcmp.1  msgcomm.1  msgconv.1  msgen.1  msgexec.1  msgfilter.1  msgfmt.1  msggrep.1  msginit.1  msgmerge.1  msgunfmt.1  msguniq.1  recode-sr-latin.1  xgettext.1
gettext/gettext-tools/misc/: Makefile.in
gettext/gettext-tools/po/: be.gmo  be.po  bg.gmo  bg.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  es.gmo  es.po  et.gmo  et.po  eu.gmo  eu.po  fi.gmo  fi.po  fr.gmo  fr.po  gettext-tools.pot  gl.gmo  gl.po  id.gmo  id.po  it.gmo  it.po  ja.gmo  ja.po  ko.gmo  ko.po  nb.gmo  (+35 more)
gettext/gettext-tools/projects/: Makefile.in
gettext/gettext-tools/src/: Makefile.in  po-gram-gen.c  po-gram-gen.h  po-gram-gen2.h
gettext/gettext-tools/styles/: Makefile.in
gettext/gettext-tools/tests/: Makefile.in  sentence
gettext/gnulib-local/: Makefile.in
gst-plugins-bad/ext/asfmux/: Makefile.am  Makefile.in
gst-plugins-bad/ext/mozilla/: Makefile.am  Makefile.in  mozillasrc.cpp
gst-plugins-bad/sys/: Makefile.am  Makefile.in
gst-plugins-bad/sys/acmenc/: Makefile.am  Makefile.in  acmenc.c
gst-plugins-bad/sys/acmmp3dec/: Makefile.am  Makefile.in  acmmp3dec.c
gst-plugins-bad/sys/androidmedia/: Makefile.in
gst-plugins-bad/sys/applemedia/: Makefile.in
gst-plugins-bad/sys/applemedia-nonpublic/: Makefile.in
gst-plugins-bad/sys/avc/: Makefile.in
gst-plugins-bad/sys/bluez/: Makefile.in
gst-plugins-bad/sys/d3dvideosink/: Makefile.am  Makefile.in
gst-plugins-bad/sys/decklink/: Makefile.in
gst-plugins-bad/sys/directdraw/: Makefile.in
gst-plugins-bad/sys/directsound/: Makefile.in  gstdirectsoundsrc.h
gst-plugins-bad/sys/dmoenc/: Makefile.am  Makefile.in  comtaskthread.c  dmoenc.cpp  dmoenc.h  wmadmoenc.cpp  wmvdmoenc.cpp
gst-plugins-bad/sys/dshowdecwrapper/: Makefile.am  Makefile.in  comtaskthread.c  comtaskthread.h  gstdshowaudiodec.c  gstdshowaudiodec.cpp  gstdshowaudiodec.h  gstdshowdecwrapper.c  gstdshowdecwrapper.cpp  gstdshowfakesrc.cpp  gstdshowutil.cpp  gstdshowutil.h  gstdshowvideodec.c  gstdshowvideodec.cpp  gstdshowvideodec.h
gst-plugins-bad/sys/dshowsrcwrapper/: Makefile.am  Makefile.in
gst-plugins-bad/sys/dshowvideosink/: Makefile.am  Makefile.in  comtaskthread.c  (+2 more)
gstreamer/common/: ChangeLog  Makefile.am  Makefile.in  gst.supp  gstdoc-scangobj  gtk-doc-plugins.mak  gtk-doc.mak  mangle-tmpl.py  scangobj-merge.py  upload-doc.mak
(+11203 files in other folders)
