SUBDIRS = m4

EXTRA_DIST = \
	ChangeLog \
	gettext.patch \
	glib-gen.mak gtk-doc.mak upload.mak release.mak win32.mak \
	gst-autogen.sh \
	check-exports \
	c-to-xml.py gst-xmlinspect.py mangle-tmpl.py scangobj-merge.py \
	gtk-doc-plugins.mak \
	plugins.xsl gstdoc-scangobj \
	gst.supp check.mak \
	coverage/lcov.mak \
	coverage/coverage-report.pl \
	coverage/coverage-report.xsl \
	coverage/coverage-report-entry.pl
