INSTALL( FILES
         mp4file.h
         mp4itunestag.h
         mp4isobox.h
         mp4isofullbox.h
         mp4containerbox.h
         mp4skipbox.h
         mp4moovbox.h
         mp4mvhdbox.h
         mp4trakbox.h
         mp4mdiabox.h
         mp4minfbox.h
         mp4stblbox.h
         mp4stsdbox.h
         mp4sampleentry.h
         mp4audiosampleentry.h
         mp4hdlrbox.h
         mp4ilstbox.h
         boxfactory.h
         mp4fourcc.h
         mp4udtabox.h
         mp4metabox.h
         mp4tagsproxy.h
         mp4propsproxy.h
         mp4audioproperties.h
         mp4metadatabox.h
         itunesnambox.h
         itunesartbox.h
         itunesaartbox.h
         itunesalbbox.h
         itunesgenbox.h
         itunestrknbox.h
         itunesdaybox.h
         itunescmtbox.h
         itunesgrpbox.h
         ituneswrtbox.h
         itunesdiskbox.h
         itunestmpobox.h
         itunescvrbox.h
         itunesdatabox.h
         DESTINATION ${INCLUDE_INSTALL_DIR}/taglib)
